[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "neuropredict"
dynamic = ["version"]
description = "easy and standardized predictive analysis for biomarkers, neuroimaging, and beyond"
readme = "README.rst"
license = "Apache-2.0"
authors = [
    { name = "Pradeep Reddy Raamana", email = "raamana@gmail.com" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
dependencies = [
    "confounds",
    "matplotlib",
    "nibabel",
    "numpy",
    "pyradigm>=0.6.dev1",
    "scikit-learn",
    "scipy",
    "setuptools",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/raamana/neuropredict"

[project.scripts]
neuropredict = "neuropredict.__classify__:main"
neuropredict_classify = "neuropredict.__classify__:main"
neuropredict_regress = "neuropredict.__regress__:main"
np_classify = "neuropredict.__classify__:main"
np_regress = "neuropredict.__regress__:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "neuropredict/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/neuropredict",
]
exclude = [
  "/.github",
  "/docs",
]